--- a/app/smarthrui/webapp/i18n/i18n.properties
+++ b/app/smarthrui/webapp/i18n/i18n.properties
@@ -1,19 +1,64 @@
 # App Descriptor
 appTitle=Smart HR Portal
-appDescription=Smart HR Portal Application
+appDescription=AI-Powered HR Management System
 
-# Dashboard
-dashboardTitle=HR Dashboard
-welcomeMessage=Welcome to Smart HR Portal
-
-# Navigation
+# Main Navigation
 navDashboard=Dashboard
 navEmployees=Employees
 navAnalytics=Analytics
+navAI=AI Insights
+
+# Dashboard
+dashboardTitle=HR Dashboard
+dashboardSubtitle=Welcome to Smart HR Portal
+totalEmployees=Total Employees
+keyTalent=Key Talent
+openPositions=Open Positions
+avgSatisfaction=Avg Satisfaction
+
+# Employees
+employeesTitle=Employee Management
+employeeDetails=Employee Details
+firstName=First Name
+lastName=Last Name
+role=Role
+department=Department
+hireDate=Hire Date
+manager=Manager
+isKeyTalent=Key Talent
+employeeId=Employee ID
+
+# Analytics
+analyticsTitle=HR Analytics
+departmentSummary=Department Summary
+attritionRisk=Attrition Risk
+performanceMetrics=Performance Metrics
+satisfactionTrends=Satisfaction Trends
+
+# AI Insights
+aiTitle=AI-Powered Insights
+generateInsights=Generate Insights
+attritionAnalysis=Attrition Analysis
+trainingRecommendations=Training Recommendations
+engagementIdeas=Engagement Ideas
+policyAnalysis=Policy Analysis
+teamPerformance=Team Performance
 
 # Common
 loading=Loading...
 error=Error
 success=Success
+cancel=Cancel
+save=Save
+edit=Edit
+delete=Delete
 refresh=Refresh
-settings=Settings
+search=Search
+filter=Filter
+export=Export
+
+# Messages
+noDataFound=No data found
+dataLoadError=Error loading data
+actionSuccess=Action completed successfully
+actionError=Error performing action
